MRSL 0.3 : introduces named assets. See AssetsBuilder for design motivation